--- a/src/Components/Pages/Login/Login.css
+++ b/src/Components/Pages/Login/Login.css
@@ -3,7 +3,7 @@
   margin-top: 230px;
   border-radius: 50px;
   padding: 20px;
-  background-color: #cbcdff;
+  background-color: #757575;
   box-shadow: 5px 6px #888888;
 }
 
@@ -20,15 +20,22 @@
   align-content: center;
 }
 
+.login-password-field {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .login-button {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-content: center;
+  width: 70px;
+  margin: auto;
 }
 
 .main-content-login {
-  background-color: #9094e2;
+  background-color: #292929;
   position: fixed;
   width: 100%;
   height: 100%;
