--- a/src/Components/Pages/Signup/Signup.css
+++ b/src/Components/Pages/Signup/Signup.css
@@ -3,7 +3,7 @@
   margin-top: 230px;
   border-radius: 50px;
   padding: 20px;
-  background-color: #cbcdff;
+  background-color: #757575;
   box-shadow: 5px 6px #888888;
 }
 
@@ -17,7 +17,7 @@
 }
 
 .main-content {
-  background-color: #9094e2;
+  background-color: #292929;
   position: fixed;
   width: 100%;
   height: 100%;
